@@ -1,3 +1,3 @@
-man1_MANS = Mbt.1 Mbtg.1
+man1_MANS = mbt.1 mbtg.1
 
-EXTRA_DIST = Mbt.1 Mbtg.1
+EXTRA_DIST = mbt.1 mbtg.1
