@@ -1,21 +1,21 @@
-.TH Mbt 1 "2010 november 17"
+.TH mbt 1 "2011 march 21"
 
 .SH NAME
 MBT - Memory Based Tagger
 .SH SYNOPSYS
-Mbt [options]
+mbt [options]
 
 .SH DESCRIPTION
-Mbt is a memory-based tagger that can tag sequences, based on training
+mbt is a memory-based tagger that can tag sequences, based on training
 files generated by
-.B Mbtg.
+.B mbtg.
 
 .SH OPTIONS
 
 .BR -s " settingsfile"
 .RS
 use a settingsfile as generated by 
-.B Mbtg
+.B mbtg
 .RE
 
 Or:
@@ -38,13 +38,15 @@ Or:
 
 .BR -o " <outputfile> (default stdout)"
 
-.BR -O "Timbl options"
+.BR -O "timbl options"
 .RS
  (Note: there is NO SPACE between O and the options)
   <options>   classifier options for both known and unknown words instance bases
   K: <options>   classifier options for known words instance base
   U: <options>   classifier options for unknown words instance base
-  valid Timbl options: a d k m q v w x -
+  valid 
+.BR timbl
+options are: a d k m q v w x -
 .RE
 
 .BR -B " <beamsize for search> (default = 1)"
@@ -70,6 +72,6 @@ Ko van der Sloot Timbl@uvt.nl
 Antal van den Bosch Timbl@uvt.nl
 
 .SH SEE ALSO
-.BR Timbl (1)
-.BR Mbtg (1)
-.BR MbtServer (1)
+.BR timbl (1)
+.BR mbtg (1)
+.BR mbtserver (1)
